menambahkan deskripsi aplikasi

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
-            <p>Hai everyone! kenalin aku Gizza Gaw. Saat ini aku pelajar yang sedang duduk dikelas 11. Hobi aku membaca komik, bermain game, menambah pengalaman dengan ikut kompetisi/olimpiade, dan juga menonton konser omline hehehe, oh ya aku juga suka buat vlog lhoo sejak tahun 2017, dan dalam beberapa kesempatan aku suka mengikuti webinar online untuk menambah pengalaman dan pengetahuan.</p>
+            <p>Hai everyone! kenalin aku Gizza Gaw. Saat ini aku pelajar yang sedang duduk dikelas 11. Hobi aku membaca komik, bermain game, menambah pengalaman dengan ikut kompetisi/olimpiade, dan juga menonton konser online hehehe, oh ya aku juga suka buat vlog lhoo sejak tahun 2017, dan dalam beberapa kesempatan aku suka mengikuti webinar online untuk menambah pengalaman dan pengetahuan.</p>
           </div>
           <div class="col-md-4">
             <p>Btw salam kenal ya ^_^ guys jika kalian penasaran dengan aku kalian jangan sungkan buat tanya" sama aku lewat DM atau Comment bisa lewat sosmed pribadi milikku melalui Instagram atau twitter @gizz_geyzz diakun tersebut aku akan berusaha jawab satu persatu, untuk kalian yang penasaran sama vlog aku kalian bisa check saja acc instagram @giezo._geyzz dan juga @gizx._spamx3</p>
@@ -100,7 +100,7 @@
             <div class="card">
               <img src="img/projects/9.jpg" class="card-img-top" alt="Project 2">
               <div class="card-body">
-                <p class="card-text">ScanQRcode adalah aplikasi yang dapat membantu kita untuk melakukan pemindaian pada QR code setelah itu maka isi dari QR code tersebut dapat diketahui. ScanQRcode ialah salah satu project aplikasi yang berhasil saya buat dengan bantuan sistem dari Kodular.</p>
+                <p class="card-text">ScanQRcode adalah aplikasi yang dapat membantu kita untuk melakukan pemindaian pada QR code yang berfungsi untuk mengetahui isi dari QR code tersebut. ScanQRcode ialah salah satu project aplikasi yang berhasil saya buat dengan bantuan sistem dari Kodular.</p>
               </div>
             </div>
           </div>
