menambahkan deskripsi project

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="card">
               <img src="img/projects/1.jpg" class="card-img-top" alt="Project 4">
               <div class="card-body">
-                <p class="card-text">MathQuiz adalah aplikasi yang dapat membantu kita untuk berlatih, kemudian juga dapat kita manfaatkan untuk memecahkan soal matematika dengan mudah. MathQuiz ialah salah satu project aplikasi yang berhasil saya buat dengan bantuan sistem dari Kodular.</p>
+                <p class="card-text">MathQuiz adalah aplikasi yang dapat membantu kita untuk melatih otak untuk menghitung cepat, kemudian agar kita dapat memecahkan soal matematika dengan mudah. MathQuiz ialah salah satu project aplikasi yang berhasil saya buat dengan bantuan sistem dari Kodular.</p>
               </div>
             </div>
           </div>
